package com.directi.training.ocp.exercise_refactored;

public interface IResource {
    public void markSlotFree() ;
    public void markSlotBusy() ;
    public int findFree() ;

}
