package com.directi.training.ocp.exercise_refactored;

public class TimeSlot implements IResource{
    @Override
    public void markSlotFree() {
        
        
    }

    @Override
    public void markSlotBusy() {
        
        
    }

    @Override
    public int findFree() {
        
         return 0 ;
    }
}
